delete redundant files

--- a/notebooks/SV_NSDE_Colab.ipynb
+++ b/notebooks/SV_NSDE_Colab.ipynb
@@ -46,25 +46,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'Colab Notebooks'\t\t     Scale_AI_Cover_Letter_Short.docx\n",
-      " CV\t\t\t\t     WeiboCOV\n",
-      " ER.drawio\t\t\t    'Xiaoyang Wan ALL.gdoc'\n",
-      " Graduation_Invitation_Letter.docx  'Xiaoyang Wan CV'\n",
-      "'My Stuff'\t\t\t    'Xiaoyang Wan CV.pdf'\n",
-      " piggys\t\t\t\t     招工记录.gsheet\n",
-      " Roblox_Cover_Letter.docx\n"
+      "'Copy of 2019-12.csv'  'Copy of 2020-05.csv'  'Copy of 2020-10.csv'\n",
+      "'Copy of 2020-01.csv'  'Copy of 2020-06.csv'  'Copy of 2020-11.csv'\n",
+      "'Copy of 2020-02.csv'  'Copy of 2020-07.csv'  'Copy of 2020-12.csv'\n",
+      "'Copy of 2020-03.csv'  'Copy of 2020-08.csv'  'Copy of user.csv'\n",
+      "'Copy of 2020-04.csv'  'Copy of 2020-09.csv'\n"
      ]
     }
    ],
    "source": [
-    "! ls drive/My\\ Drive/ "
+    "! ls drive/My\\ Drive/WeiboCOV "
    ]
   },
   {
@@ -87,7 +85,7 @@
     "if IN_COLAB:\n",
     "    print(\"🚀 Running in Google Colab\")\n",
     "    # 克隆仓库\n",
-    "    !git clone https://github.com/YOUR_USERNAME/YOUR_REPO.git sv_nsde_repo\n",
+    "    !git clone https://github.com/trumpool/Research.git sv_nsde_repo\n",
     "    %cd sv_nsde_repo\n",
     "    \n",
     "    # 安装依赖\n",
